@@ -2,5 +2,5 @@ additions
 - Make custom names for the gen passes and display them
 - Add config to change spawn point to any house (and have cool ui thing??)  
 - Un-scuff the world gen passes cuz of the wiring thing for the basement
-- make the rose item frame spawn in the center of the main house cuz im dum
-- make partial structures (and have paintings of the full structure??)
+- make ruined structures (and have paintings of the full structure??)
+- mention roomates mod?
